Add basic layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,18 @@
     <title>Starter</title>
 </head>
 <body>
+    <div class="container">
+      <div class="header">
+        <div class="logo">Tracker</div>
+      </div>
+
+      <div class="main">This is main</div>
+
+      <div class="nav">
+        <div id="today" class="nav-item active">Today</div>
+        <div id="report" class="nav-item">Report</div>
+        <div id="schedule" class="nav-item">Schedule</div>
+      </div>
+    </div>
 </body>
 </html>
