Add main section

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
           <div class="name">Extra Class</div>
         </div>
       </div>
-      
+      <div id="main">
+         <div id="starter">
+            <button>Get Started!</button>
+         </div>
+      </div>
     </div>
   </body>
 </html>
