--- a/src/index.html
+++ b/src/index.html
@@ -1,58 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tracker</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <div id="logo">Tracker</div>
-        <div id="menu-icon">
-          <img src="../src/icons/menu.svg" alt="" srcset="" />
-        </div>
-      </div>
-      <div id="menu">
-        <div class="pageTab active" id="home">
-          <div class="icon"><img src="" alt="" srcset="" /></div>
-          <div class="name">Home</div>
-        </div>
-        <div class="pageTab" id="subjects">
-          <div class="icon"><img src="" alt="" srcset="" /></div>
-          <div class="name">Subjects</div>
-        </div>
-        <div class="pageTab" id="schedule">
-          <div class="icon"><img src="" alt="" srcset="" /></div>
-          <div class="name">Schedule</div>
-        </div>
-        <div class="pageTab" id="extraclass">
-          <div class="icon"><img src="" alt="" /></div>
-          <div class="name">Extra Class</div>
-        </div>
-      </div>
-      <div id="main">
-        <div id="starter" class="page">
-          <button>Get Started!</button>
-        </div>
 
-        <div id="subjects-page" class="page">
-          <div class="sub-pg-wrapper">
-            <form action="" class="add">
-              <input type="text" class="  " id="subject-name" placeholder="Enter the subject name" />
-              <button type="submit">Add</button>
-            </form>
-        
-            <div class="subject-list">
-              <p>"Add subjects to get started"</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tracker</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <div id="logo">Tracker</div>
+      <div id="menu-icon">
+        <img src="../src/icons/menu.svg" alt="" srcset="" />
+      </div>
+    </div>
+    <div id="menu">
+      <div class="pageTab active" id="home">
+        <div class="icon"><img src="" alt="" srcset="" /></div>
+        <div class="name">Home</div>
+      </div>
+      <div class="pageTab" id="subjects">
+        <div class="icon"><img src="" alt="" srcset="" /></div>
+        <div class="name">Subjects</div>
+      </div>
+      <div class="pageTab" id="schedule">
+        <div class="icon"><img src="" alt="" srcset="" /></div>
+        <div class="name">Schedule</div>
+      </div>
+      <div class="pageTab" id="extraclass">
+        <div class="icon"><img src="" alt="" /></div>
+        <div class="name">Extra Class</div>
+      </div>
+    </div>
+    <div id="main">
+      <div id="starter" class="page">
+        <button>Get Started!</button>
+      </div>
+
+      <div id="subjects-page" class="page">
+        <div class="sub-pg-wrapper">
+          <form action="" class="add">
+            <input type="text" class="  " id="subject-name" placeholder="Enter the subject name" />
+            <button type="submit">Add</button>
+          </form>
+
+          <div class="subject-list">
+            <p>"Add subjects to get started"</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="schedule-page" class="page">
+        <div class="schedule-pg-wrapper">
+          <div class="heading">
+            <h2>Schedule</h2>
+          </div>
+          <div class="day" id="mon">
+            <div class="add">
+              <div class="name">
+                Mon
+              </div>
+              <button>Add</button>
+              <div class="drop-down">
+                <img src="" alt="">
+              </div>
             </div>
+
+            <div class="subject-list-wrapper">
+              <div class="subject-list">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="day" id="tue">
+            <div class="add">
+              <div class="name">
+                Tue
+              </div>
+              <button>Add</button>
+              <div class="drop-down">
+                <img src="" alt="">
+              </div>
+            </div>
+
+            <div class="subject-list-wrapper">
+              <div class="subject-list">
+
+              </div>
+            </div>
+          </div>
+
+          <div class="day" id="wed">
+            <div class="add">
+              <div class="name">
+                Wed
+              </div>
+              <button>Add</button>
+              <div class="drop-down">
+                <img src="" alt="">
+              </div>
+            </div>
+
+            <div class="subject-list-wrapper">
+              <div class="subject-list">
+
+              </div>
+            </div>
+          </div>
+
+          <div class="day" id="thr">
+            <div class="add">
+              <div class="name">
+                Thr
+              </div>
+              <button>Add</button>
+              <div class="drop-down">
+                <img src="" alt="">
+              </div>
+            </div>
+
+            <div class="subject-list-wrapper">
+              <div class="subject-list">
+
+              </div>
+            </div>
+          </div>
+
+          <div class="day" id="fri">
+            <div class="add">
+              <div class="name">
+                Fri
+              </div>
+              <button>Add</button>
+              <div class="drop-down">
+                <img src="" alt="">
+              </div>
+            </div>
+
+            <div class="subject-list-wrapper">
+              <div class="subject-list">
+
+              </div>
+            </div>
+          </div>
+
+          <div class="modal">
+            <dialog>
+              <div class="dialog"></div>
+            </dialog>
           </div>
         </div>
 
-        <div id="home-page" class="page">home</div>
-        <div id="schedule-page" class="page">Schedule</div>
-        <div id="extraclass-page" class="page">Extra class</div>
+        <div class="message">
+          <p>"Add Week schedule to get started!"</p>
+        </div>
       </div>
+
+
+      <div id="home-page" class="page">home</div>
+      <div id="extraclass-page" class="page">Extra class</div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
