--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,26 @@
       </div>
 
 
-      <div id="home-page" class="page">home</div>
+      <div id="home-page" class="page">
+        <div class="home-pg-wrapper">
+            <div class="home content">
+              <div class="heading">
+                <h2 id="day">Friday</h2>
+              <p id="date">Dec 29, 2023</p>
+            </div>
+            <div class="subjects-wrapper">
+             
+            </div>
+            </div>
+            <div class="Report content" style="display: none;">
+
+            </div> 
+          <div class="nav">
+            <div class="nav-item current" id="today">Today</div>
+            <div class="nav-item" id="report">Report</div>
+          </div>
+        </div>
+      </div>
       <div id="extraclass-page" class="page">Extra class</div>
     </div>
   </div>
