Correct typo from Thr to Thu

--- a/src/index.html
+++ b/src/index.html
@@ -116,10 +116,10 @@
             </div>
           </div>
 
-          <div class="day" id="thr">
+          <div class="day" id="thu">
             <div class="add">
               <div class="name">
-                Thr
+                Thu
               </div>
               <button>Add</button>
               <div class="drop-down">
