--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
 
       <div id="home-page" class="page">
         <div class="home-pg-wrapper">
-            <div class="home content">
+            <div class="today content">
               <div class="heading">
                 <h2 id="day">Friday</h2>
               <p id="date">Dec 29, 2023</p>
@@ -176,12 +176,22 @@
              
             </div>
             </div>
-            <div class="Report content" style="display: none;">
-
+            <div class="report content">
+              <div class="report-container">
+                <div class="table-header table-row">
+                  <div class="cell subjects">Subjects</div>
+                  <div class="cell total">Total </div>
+                  <div class="cell attended">Attended</div>
+                  <div class="cell percent">%</div>
+                </div>
+                <div class=" table table-content">
+                  
+                </div>
+              </div>
             </div> 
           <div class="nav">
-            <div class="nav-item current" id="today">Today</div>
-            <div class="nav-item" id="report">Report</div>
+            <div class="nav-item " id="today">Today</div>
+            <div class="nav-item current" id="report">Report</div>
           </div>
         </div>
       </div>
