Make today page default landing page

--- a/src/index.html
+++ b/src/index.html
@@ -190,8 +190,8 @@
               </div>
             </div> 
           <div class="nav">
-            <div class="nav-item " id="today">Today</div>
-            <div class="nav-item current" id="report">Report</div>
+            <div class="nav-item current" id="today">Today</div>
+            <div class="nav-item " id="report">Report</div>
           </div>
         </div>
       </div>
