--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,11 @@
           </div>
         </div>
       </div>
-      <div id="extraclass-page" class="page">Extra class</div>
+      <div id="extraclass-page" class="page">
+        <div class="extraclass-pg-wrapper">
+          
+        </div>
+      </div>
     </div>
   </div>
 </body>
