--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="header">
       <div id="logo">Tracker</div>
       <div id="menu-icon">
-        <img src="../src/icons/menu.svg" alt="" srcset="" />
+        <img src="" alt="" srcset="" />
       </div>
     </div>
     <div id="menu">
