Add message for user

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
           <div class="subject-list">
             <p>"Add subjects to get started"</p>
           </div>
+
+          <div class="message">Add <span id="link">schedule</span> after adding subjects</div>
         </div>
       </div>
 
