Add settings tab in menu

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
         <div class="icon"><img src="" alt="" /></div>
         <div class="name">Extra Class</div>
       </div>
+      <div class="pageTab" id="settings">
+        <div class="icon"><img src="" alt="" /></div>
+        <div class="name">Settings</div>
+      </div>
     </div>
     <div id="main">
       <div id="starter" class="page">
