Add settings page

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,15 @@
           
         </div>
       </div>
+
+      <div id="settings-page" class="page">
+        <div class="settings-pg-wrapper">
+          <div class="reset setting">
+            <span>Reset the app : </span>
+            <button>Reset</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
